package com.github.yck.pattern.structural.proxyAB.proxy.staticproxy;

public interface ITeacher {
    void teach();
}
