@startuml
'https://plantuml.com/class-diagram
note as N
    <b> 代理模式 </b>
    <i> 静态代理模式 </i>
end note
interface ITeacher{
teach()
}
ITeacher <|.. Teacher
class TeacherProxy{
    Teacher t;
    teach()
}
ITeacher <|.. TeacherProxy
Teacher ..o TeacherProxy

TeacherProxy <-- Client
Teacher <-- Client

@enduml